@@ -217,8 +217,8 @@ public class PrimProcedure extends MethodProc implements gnu.expr.Inlineable
     this.op_code = op_code;
     if (op_code == 185) // invokeinterface
       classtype.access_flags |= Access.INTERFACE;
-    method = classtype.addMethod (name, argTypes, retType,
-				   op_code == 184 ? Access.STATIC : 0);
+    method = classtype.addMethod (name, op_code == 184 ? Access.STATIC : 0,
+				  argTypes, retType);
     this.retType = retType;
     this.argTypes= argTypes;
   }
